--- a/bio/index.html
+++ b/bio/index.html
@@ -66,7 +66,7 @@
             </a>
         </li>
         <li class="i-s">
-            <a href="https://be100you.com">
+            <a href="#">
                 <div class='logo'>
                     <i class='fas fa-dumbbell fa-2x'></i>
                 </div>
