--- a/bio2/index.html
+++ b/bio2/index.html
@@ -66,13 +66,13 @@
             </a>
         </li>
         <li class="i-s">
-            <a href="https://be100you.com">
+            <a href="#">
                 <div class='logo'>
                     <i class='fas fa-dumbbell fa-2x'></i>
                 </div>
-                <p class='title'>
+                <button class='title' id="checkout-button-price_HMSjXAyO90cY64" role="link">
                     Programme d'entraînement
-                </p>
+                </button>
             </a>
         </li>
         <li class="i-s">
