--- a/bio/index.html
+++ b/bio/index.html
@@ -17,7 +17,7 @@
         <br>
         @be100you
         <br>
-        Explore 100% of your potential!
+        Explorez 100% de votre potentiel!
         <br>
         <div id="error-message"></div>
     </div>
@@ -50,7 +50,7 @@
                     <i class='fab fa-youtube fa-2x' style="color: red; text-shadow: 1px 1px 4px #333333;"></i>
                 </div>
                 <p class='title'>
-                    YouTube videos
+                    Vidéos YouTube
                     <!-- <span>iaco.me/youtube</span> -->
                 </p>
             </a>
@@ -66,7 +66,7 @@
             </a>
         </li>
         <li class="i-s">
-            <a href="https://be100you.com">
+            <a href="https://be100you.com/#exercise">
                 <div class='logo'>
                     <i class='fas fa-dumbbell fa-2x'></i>
                 </div>
@@ -76,7 +76,7 @@
             </a>
         </li>
         <li class="i-s">
-            <a href="https://be100you.com">
+            <a href="https://be100you.com/#nutrition">
                 <div class='logo'>
                     <i class='fas fa-apple-alt fa-2x'></i>
                 </div>
