--- a/bio/index.html
+++ b/bio/index.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="../config/list.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-    <!-- Load Stripe.js on your website. -->
-    <script src="https://js.stripe.com/v3"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="../icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icon/favicon-16x16.png">
+    <link rel="manifest" href="../icon/site.webmanifest">
+    <link rel="mask-icon" href="../icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../icon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="../icon/browserconfig.xml">
+    <meta name="theme-color" content="#141414">
 </head>
 <body>
     <div class="author-photo">
@@ -19,31 +26,24 @@
         <br>
         Explorez 100% de votre potentiel!
         <br>
-        <div id="error-message"></div>
     </div>
+
+    <br>
+
     <ul>
-        <!--<li class="i-b">
-            <a href="https://be100you.com">
-                <span style="background-image: url('https://be100you.com/img/gym.jpg'); background-size: cover; background-position: right;"></span>
-                <div>
-                    <h2>🏔️ be100you.com & Our Health Triangle Δ</h2>
-                    <p>Explore 100% of your potential! Take good care of your body & mind. Improve your exercise, nutrition & rest...</p>
+        <li class="i-s shake">
+            <a href="../exercise">
+                <div class='logo'>
+                    <i class='fas fa-dumbbell fa-2x'></i>
                 </div>
+                <p class='title'>
+                    Plan d'entraînement personnalisé
+                </p>
             </a>
         </li>
-        <li class="i-b">
-            <a href="https://iaco.me/post/001">
-                <span style="background-image: url('/post/001/cover.jpg'); background-size: cover; background-position: right;"></span>
-                <div>
-                    <h2>🌱 1 year vegan: Celebrating bday with a Vegan (dah!) Chocolate Mousse</h2>
-                    <p>Last weekend I celebrated my first vegan-bday! Even though this adventure has just began, I have already had many...</p>
-                </div>
-            </a>
-        </li>-->
-
-
-
-        <li class="i-s shake">
+    </ul>
+    <ul>
+        <li class="i-s">
             <!-- <a href="https://www.youtube.com/channel/UCU7bgSLEAQE3FY7UO_OfcKw"> -->
             <a href="https://www.youtube.com/watch?v=PSAhrB2V5kQ">
                 <div class='logo'>
@@ -51,10 +51,11 @@
                 </div>
                 <p class='title'>
                     Vidéos YouTube
-                    <!-- <span>iaco.me/youtube</span> -->
                 </p>
             </a>
         </li>
+    </ul>
+    <ul>
         <li class="i-s">
             <a href="https://be100you.com">
                 <div class='logo'>
@@ -65,58 +66,17 @@
                 </p>
             </a>
         </li>
-        <li class="i-s">
-            <a href="https://be100you.com/#exercise">
-                <div class='logo'>
-                    <i class='fas fa-dumbbell fa-2x'></i>
-                </div>
-                <p class='title'>
-                    Programme d'entraînement
-                </p>
-            </a>
-        </li>
-        <li class="i-s">
-            <a href="https://be100you.com/#nutrition">
-                <div class='logo'>
-                    <i class='fas fa-apple-alt fa-2x'></i>
-                </div>
-                <p class='title'>
-                    Plan alimentaire
-                </p>
-            </a>
-        </li>
     </ul>
 
-    <script>
-    (function() {
-      var stripe = Stripe('pk_test_MVkacuQU4ajzCEDvDW5MJGAx000lKyyDOx');
+    <br>
+    <br>
 
-      var checkoutButton = document.getElementById('checkout-button-price_HMSjXAyO90cY64');
-      checkoutButton.addEventListener('click', function () {
-        // When the customer clicks on the button, redirect
-        // them to Checkout.
-        stripe.redirectToCheckout({
-          lineItems: [{price: 'price_HMSjXAyO90cY64', quantity: 1}],
-          mode: 'payment',
-          // Do not rely on the redirect to the successUrl for fulfilling
-          // purchases, customers may not always reach the success_url after
-          // a successful payment.
-          // Instead use one of the strategies described in
-          // https://stripe.com/docs/payments/checkout/fulfillment
-          successUrl: 'https://be100you.com/success',
-          cancelUrl: 'https://be100you.com/canceled',
-        })
-        .then(function (result) {
-          if (result.error) {
-            // If `redirectToCheckout` fails due to a browser or network
-            // error, display the localized error message to your customer.
-            var displayError = document.getElementById('error-message');
-            displayError.textContent = result.error.message;
-          }
-        });
-      });
-    })();
-    </script>
+    <center><script>document.write(new Date().getFullYear())</script> &copy; be100you</center>
+
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
