--- a/bio/index.html
+++ b/bio/index.html
@@ -20,19 +20,21 @@
 </head>
 <body>
     <div class="author-photo">
-        <img src="../img/profile-circle.png">
-        <br>
-        @be100you
-        <br>
-        Explorez 100% de votre potentiel!
-        <br>
+        <a class="js-scroll-trigger" href="../bio">
+            <img src="../img/profile-circle.png">
+            <br>
+            @be100you
+            <br>
+            Explorez 100% de votre potentiel!
+            <br>
+        </a>
     </div>
 
     <br>
 
     <ul>
         <li class="i-s shake">
-            <a href="../exercise">
+            <a class="js-scroll-trigger" href="../exercise">
                 <div class='logo'>
                     <i class='fas fa-dumbbell fa-2x'></i>
                 </div>
@@ -44,8 +46,8 @@
     </ul>
     <ul>
         <li class="i-s">
-            <!-- <a href="https://www.youtube.com/channel/UCU7bgSLEAQE3FY7UO_OfcKw"> -->
-            <a href="https://www.youtube.com/watch?v=PSAhrB2V5kQ">
+            <!-- <a class="js-scroll-trigger" href="https://www.youtube.com/channel/UCU7bgSLEAQE3FY7UO_OfcKw"> -->
+            <a class="js-scroll-trigger" href="https://www.youtube.com/watch?v=PSAhrB2V5kQ">
                 <div class='logo'>
                     <i class='fab fa-youtube fa-2x' style="color: red; text-shadow: 1px 1px 4px #333333;"></i>
                 </div>
@@ -57,7 +59,7 @@
     </ul>
     <ul>
         <li class="i-s">
-            <a href="https://be100you.com">
+            <a class="js-scroll-trigger" href="https://be100you.com">
                 <div class='logo'>
                     <i class='fas fa-globe fa-2x'></i>
                 </div>
@@ -77,6 +79,10 @@
     <br>
     <br>
     <br>
+
+    <script src="../config/jquery/jquery.min.js"></script>
+    <script src="../config/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../config/grayscale.js"></script>
 </body>
 
 </html>
