--- a/bio/index.html
+++ b/bio/index.html
@@ -69,6 +69,18 @@
             </a>
         </li>
     </ul>
+    <ul>
+        <li class="i-s">
+            <a class="js-scroll-trigger" href="https://www.youtube.com/watch?v=Ks-_Mh1QhMc">
+                <div class='logo'>
+                    <i class='fab fa-youtube fa-2x'></i>
+                </div>
+                <p class='title'>
+                    TED talk : votre langage corporel...
+                </p>
+            </a>
+        </li>
+    </ul>
 
     <br>
     <br>
