--- a/bio/index.html
+++ b/bio/index.html
@@ -71,12 +71,12 @@
     </ul>
     <ul>
         <li class="i-s">
-            <a class="js-scroll-trigger" href="https://www.youtube.com/watch?v=Ks-_Mh1QhMc">
+            <a class="js-scroll-trigger" href="https://www.superphysique.org/articles/besoin_calorique_quotidien">
                 <div class='logo'>
-                    <i class='fab fa-youtube fa-2x'></i>
+                    <i class='fas balance-scale fa-2x'></i>
                 </div>
                 <p class='title'>
-                    TED talk : votre langage corporel...
+                    Calculer le besoin calorique
                 </p>
             </a>
         </li>
