--- a/bio/index.html
+++ b/bio/index.html
@@ -73,10 +73,10 @@
         <li class="i-s">
             <a class="js-scroll-trigger" href="https://www.superphysique.org/articles/besoin_calorique_quotidien">
                 <div class='logo'>
-                    <i class='fas balance-scale fa-2x'></i>
+                    <i class='fas fa-calculator fa-2x'></i>
                 </div>
                 <p class='title'>
-                    Calculer le besoin calorique
+                    Calculer besoin calorique
                 </p>
             </a>
         </li>
