--- a/bio/index.html
+++ b/bio/index.html
@@ -25,7 +25,7 @@
             <br>
             @be100you
             <br>
-            Explorez 100% de votre potentiel!
+            Explore 100% de ton potentiel !
             <br>
         </a>
     </div>
@@ -64,7 +64,19 @@
                     <i class='fas fa-globe fa-2x'></i>
                 </div>
                 <p class='title'>
-                    be100you.com
+                    Site web be100you.com
+                </p>
+            </a>
+        </li>
+    </ul>
+    <ul>
+        <li class="i-s">
+            <a class="js-scroll-trigger" href="https://instagram.com/be100you">
+                <div class='logo'>
+                    <i class='fab fa-instagram fa-2x'></i>
+                </div>
+                <p class='title'>
+                    Profil Instagram
                 </p>
             </a>
         </li>
